Fixed padding issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,15 @@
   display: block;
   text-align: start;
   font-family: 'Open Sans', sans-serif;
-  padding-left: 25%;
-  padding-right: 25%;
+  box-sizing: border-box;
   padding-bottom: 5%;
   max-width: 900px;
   min-width: 400px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin: auto;
 }
 
-.Footer {
-  margin-top: 2%;
-  padding-left: 25%;
-  padding-right: 25%;
-  padding-bottom: 5%;
-}
 
 .test div {
   background: white;
